--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,40 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Motion Detection - Rock Paper Scissors</title>
-</head>
-<body>
-    <h1>Rock Paper Scissors</h1>
-    <h2>Choose your opponent:</h2>
-    <form action="/play_ai" method="get">
-        <button type="submit">Player v AI</button>
-    </form>
-    <form action="/play_player" method="get">
-        <button type="submit">Player v Player</button>
-    </form>
-
-    <!-- auto refresh every 5sec to see the game state -->
-    <meta http-equiv="refresh" content="5">
-
+    <title>Rock Paper Scissors</title>
     <!-- Bootstrap 5.1 for simple web GUI widgets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
-</body>
-
-<div class="container my-5">
-    <div class="p-5">
-        Game
-    </div>
-    <div class="p-5">
+<body>
+    <div class="container my-5">
+        <h1>Rock Paper Scissors</h1>
+        <h2>Game Stage: {{ game_state.stage }}</h2>
+        <div class="row">
+            <div class="col">
+                {% if game_state.user_move_name %}
+                <h3>Your Move: {{ game_state.user_move_name }}</h3>
+                {% endif %}
+            </div>
+            <div class="col">
+                {% if game_state.computer_move_name %}
+                <h3>Computer's Move: {{ game_state.computer_move_name }}</h3>
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                {% if game_state.winner %}
+                <h3>Winner: {{ game_state.winner }}</h3>
+                {% endif %}
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 {% if game_state.game_running %}
-                <div class="spinner-border text-primary" ></div>
-                Game Stage: {{ game_state.stage }}
-                {% else %}
-                Game Not Running
+                <div class="spinner-border text-primary"></div>
                 {% endif %}
             </div>
         </div>
@@ -59,12 +57,9 @@
             </div>
         </div>
     </div>
-</div>
-
-
-<!-- Bootstrap 5.1 JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <!-- Bootstrap 5.1 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 </html>
