--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
     <!-- Bootstrap 5.1 for simple web GUI widgets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Auto refresh every 5 seconds to see the game state -->
+    <meta http-equiv="refresh" content="5">
 </head>
 <body>
     <div class="container my-5">
