--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,5 +63,31 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+
+    <!-- Include OpenCV.js -->
+    <script src="https://docs.opencv.org/4.5.5/opencv.js" onload="onOpenCvReady()" type="text/javascript"></script>
+
+    <!-- Include your VideoProcessor.js -->
+    <script src="path/to/VideoProcessor.js"></script>
+
+    <!-- Initialize the VideoProcessor -->
+    <script>
+        function onOpenCvReady() {
+            const videoElement = document.createElement('video');
+            videoElement.autoplay = true;
+            document.body.appendChild(videoElement);
+
+            // Access the camera and stream video
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then(stream => {
+                    videoElement.srcObject = stream;
+                })
+                .catch(error => {
+                    console.error('Error accessing camera:', error);
+                });
+
+            const videoProcessor = new VideoProcessor(videoElement);
+        }
+    </script>
 </body>
 </html>
